--- a/src/main/resources/main.html
+++ b/src/main/resources/main.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <title>Foos Portal</title>
+
+    <link rel="manifest" href="{{baseUrl}}/manifest.json">
+    <link rel="icon" href="{{baseUrl}}/icon.png">
+    
 </head>
 <body>
 <p>Foos Portal</p>
+<script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function () {
+            navigator.serviceWorker
+                .register('{{baseUrl}}/sw.js', {scope: "{{baseUrl}}"})
+                .then((registration) => console.log('Registration successful, scope is:', registration.scope))
+                .catch((error) => console.log('Service worker registration failed, error:', error));
+        });
+    }
+</script>
 </body>
 </html>
