--- a/src/main/resources/main.html
+++ b/src/main/resources/main.html
@@ -7,6 +7,11 @@
 
     <link rel="manifest" href="{{baseUrl}}/manifest.json">
     <link rel="icon" href="{{baseUrl}}/icon.png">
+
+    <script src="{{baseUrl}}/js/rcd-jsfwk-core.js"></script>
+
+    <link rel="stylesheet" href="{{baseUrl}}/style/main.css">
+    <script src="{{baseUrl}}/js/main.js"></script>
     
 </head>
 <body>
