GraphQL, Routing & First view (#5)

--- a/src/main/resources/main.html
+++ b/src/main/resources/main.html
@@ -16,6 +16,12 @@
 </head>
 <body class="rcd-body">
 <script>
+    const config = {
+        appUrl: "{{appUrl}}",
+        baseUrl: "{{baseUrl}}",
+        officeLeagueAppUrl: "{{officeLeagueAppUrl}}"
+    };
+    
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
             navigator.serviceWorker
