--- a/src/main/resources/main.html
+++ b/src/main/resources/main.html
@@ -19,6 +19,7 @@
     const config = {
         appUrl: "{{appUrl}}",
         baseUrl: "{{baseUrl}}",
+        serviceUrl: "{{serviceUrl}}",
         officeLeagueAppUrl: "{{officeLeagueAppUrl}}"
     };
     
