--- a/src/main/resources/main.html
+++ b/src/main/resources/main.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="{{baseUrl}}/style/main.css">
     <script src="{{baseUrl}}/js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 
 </head>
 <body class="rcd-body">
